Fixed header font size on mobile.

--- a/src/styles/styles.1.28.less
+++ b/src/styles/styles.1.28.less
@@ -54,6 +54,11 @@ header{
     font-family: "Lobster";
     font-size: 6rem;
     font-weight: normal;
+
+    @media (max-width: @site-width-mobile) {
+      font-size: 4rem;
+    }
+
   }
 
   .emoji{
